deploy/k8s/base/veidemann-controller/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: veidemann-api
  labels:
    app.kubernetes.io/name: veidemann-api
    app.kubernetes.io/component: api
spec:
  type: ClusterIP
  ports:
    - port: 7700
      name: grpc
      targetPort: grpc
  selector:
    app.kubernetes.io/name: veidemann-controller
    app.kubernetes.io/component: controller
---
apiVersion: v1
kind: Service
metadata:
  name: veidemann-api-grpc-web
  labels:
    app.kubernetes.io/name: veidemann-api-grpc-web
    app.kubernetes.io/component: api
spec:
  type: ClusterIP
  ports:
    - port: 10000
      name: http-grpc-web
      targetPort: grpc-web
      protocol: TCP
  selector:
    app.kubernetes.io/name: veidemann-controller
    app.kubernetes.io/component: controller
